fix: remove redundant scrollbar

--- a/src/app/ui/dialog-fullscreen-markdown/dialog-fullscreen-markdown.component.scss
+++ b/src/app/ui/dialog-fullscreen-markdown/dialog-fullscreen-markdown.component.scss
@@ -13,7 +13,6 @@
 
 .content {
   flex-grow: 1;
-  overflow-y: scroll;
   position: relative;
 
   textarea {
